# sframe-rs

./: CHANGELOG.md  Cargo.toml  README.md  TODOs.md  build.rs  deny.toml  flake.nix  git-cliff.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: bencher.yml  build_test.yml  ci_cd.yml  deny.yml  pull-request.yml
benches/: crypto.rs  header_parsing.rs
examples/: bip_frame_buffer.rs  caesar_cipher.rs  encrypt_decrypt.rs  generate_headers.rs
examples/sender_receiver/: counter_generator.rs  frame_count_generator.rs  main.rs  receiver.rs  sender.rs
examples/wasm-webrtc/: Cargo.toml  README.md  index.html  worker-bootstrap.js
examples/wasm-webrtc/.cargo/: config.toml
examples/wasm-webrtc/src/: lib.rs  transform.rs  webrtc.rs
src/: error.rs  frame_count_generator.rs  frame_validation.rs  key.rs  key_id.rs  lib.rs  receiver.rs  sender.rs  util.rs
src/crypto/: aead.rs  buffer.rs  cipher_suite.rs  key_derivation.rs  mod.rs  secret.rs  sframe_key.rs
src/crypto/buffer/: decryption.rs  encryption.rs  mod.rs
src/crypto/common/: mod.rs
src/crypto/openssl/: aead.rs  key_derivation.rs  mod.rs
src/crypto/ring/: aead.rs  key_derivation.rs  mod.rs
src/crypto/rust_crypto/: aead.rs  key_derivation.rs  mod.rs
src/frame/: encrypted_frame.rs  frame_buffer.rs  frame_counter.rs  media_frame.rs  mod.rs  validation.rs
src/frame/validation/: mod.rs  replay_attack_protection.rs  sliding_window.rs
src/header/: config_byte.rs  header_field.rs  mod.rs  util.rs
src/key/: crypto_key.rs  key_store.rs  mod.rs  sframe_key.rs
src/mls/: mls_key_id.rs  mod.rs
src/ratchet/: mod.rs  ratcheting_base_key.rs  ratcheting_key_id.rs  ratcheting_key_store.rs
src/test_vectors/: mod.rs
tests/: integration.rs
