[package]
edition = "2021"
license = "MIT/Apache-2.0"
name = "sframe"
version = "0.7.2"

authors = [
  "Tobias Waurick <tobtherock@proton.me>",
  "Hendrik Sollich <hendrik.sollich@goto.com>",
  "Richard Haehne <richard.haehne@goto.com>",
]

description = "pure rust implementation of SFrame (RFC 9605)"
repository = "https://github.com/TobTheRock/sframe-rs"
documentation = "https://docs.rs/sframe/"
readme = "README.md"

keywords = ["rfc9605", "encryption", "sframe", "secure-frame", "wasm"]
categories = ["cryptography", "wasm", "web-programming", "network-programming"]

[dependencies]
bitfield = "0.17"
cfg-if = "1.0"
log = "0.4"
thiserror = "2.0"

[dependencies.ring]
version = "0.17"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
ring = { version = "0.17", features = [
  "wasm32_unknown_unknown_js",
], optional = true }

[dependencies.openssl]
version = "0.10"
features = ["vendored"]
optional = true

[dev-dependencies]
bbqueue = "0.5"
cgisf_lib = "0.2"
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
lazy_static = "1.5"
phf = { version = "0.11", features = ["macros"] }
pretty_assertions = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0"
test-case = "3.1"

[features]
default = ["ring"]

[[bench]]
name = "bench_main"
harness = false
